--- a/app/src/main/res/layout/activity_functional_main.xml
+++ b/app/src/main/res/layout/activity_functional_main.xml
@@ -62,7 +62,7 @@
                 android:onClick="smartScan"
                 android:textSize="25sp"
                 android:textColor="#DCE0E5"
-                android:background="#89AC3F"
+                android:background="#E46C0A"
                 android:text="Smart Scan"
                 android:layout_margin="3dp"
                 android:layout_width="fill_parent"
@@ -83,7 +83,7 @@
                 android:onClick="viewReport"
                 android:textSize="25sp"
                 android:textColor="#DCE0E5"
-                android:background="#31859C"
+                android:background="#1C5EBB"
                 android:layout_margin="3dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
@@ -95,7 +95,7 @@
                 android:onClick="contactUs"
                 android:textSize="25sp"
                 android:textColor="#DCE0E5"
-                android:background="#E46C0A"
+                android:background="#009856"
                 android:layout_margin="3dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
