--- a/app/src/main/res/layout/activity_manual_entry.xml
+++ b/app/src/main/res/layout/activity_manual_entry.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#75001A"
+    android:background="#736F64"
     tools:context="com.vaiotech.attendaceapp.ManualEntryActivity">
 
     <TextView
@@ -197,7 +197,7 @@
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="0dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -208,7 +208,7 @@
 
     <EditText
         android:layout_marginTop="10dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#000000"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -223,7 +223,7 @@
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="0dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -234,7 +234,7 @@
 
     <TextView
         android:layout_marginTop="10dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
