--- a/app/src/main/res/layout/activity_scan_card_batch.xml
+++ b/app/src/main/res/layout/activity_scan_card_batch.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#75001A"
+    android:background="#736F64"
     tools:context="com.vaiotech.attendaceapp.ScanCardBatchActivity">
 
 
@@ -228,7 +228,7 @@
         android:text="Scanning..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#F3ED00"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:layout_above="@+id/secondHLine"
         android:layout_centerHorizontal="true"
