--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#75001A"
+    android:background="#736F64"
     tools:context="com.vaiotech.attendaceapp.ScanCardSingleActivity">
 
 
@@ -199,7 +199,7 @@
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="0dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -210,7 +210,7 @@
 
     <TextView
         android:layout_marginTop="10dp"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -225,7 +225,7 @@
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="0dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -236,7 +236,7 @@
 
     <TextView
         android:layout_marginTop="10dp"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -252,7 +252,7 @@
         android:text="Scanning..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#F3ED00"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:layout_above="@+id/secHLine"
         android:layout_centerHorizontal="true"
