--- a/app/src/main/res/layout/activity_scan_qrcode_batch.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_batch.xml
@@ -5,8 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#736F64"
-    tools:context="com.vaiotech.attendaceapp.ScanQRCodeSingleActivity">
-
+    tools:context="com.vaiotech.attendaceapp.ScanQRCodeBatchActivity">
 
     <TextView
         android:paddingLeft="10dp"
@@ -192,81 +191,44 @@
         />
 
     <TextView
-        android:layout_marginTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="0dp"
-        android:textSize="22sp"
-        android:textColor="#ffffff"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:text="0"
+        android:textSize="100sp"
+        android:gravity="center"
+        android:textColor="#E81B11"
+        android:background="#080807"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ID : "
-        android:id="@+id/idLableTV"
-        android:layout_below="@+id/seperateDateMMTV"
+        android:id="@+id/counterValTV"
+        android:layout_below="@+id/dateTV"
+        android:layout_centerHorizontal="true"
         />
 
     <TextView
-        android:layout_marginTop="10dp"
-        android:textSize="22sp"
-        android:textColor="#ffffff"
+        android:layout_marginTop="70dp"
+        android:text="Count"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/idValueTV"
-        android:layout_toRightOf="@+id/idLableTV"
-        android:layout_below="@+id/seperateDateMMTV"
+        android:id="@+id/counterLableTV"
+        android:layout_toLeftOf="@+id/counterValTV"
+        android:layout_below="@+id/dateTV"
+        android:layout_marginRight="20dp"
         />
 
-    <TextView
-        android:layout_marginTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="0dp"
-        android:textSize="22sp"
-        android:textColor="#ffffff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name : "
-        android:id="@+id/userNameLableTV"
-        android:layout_below="@+id/idLableTV"
-        />
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:textSize="22sp"
-        android:textColor="#ffffff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/userNameValueTV"
-        android:layout_toRightOf="@+id/userNameLableTV"
-        android:layout_toEndOf="@+id/userNameLableTV"
-        android:layout_below="@+id/idLableTV"
-        />
 
 
     <View
-        android:layout_above="@+id/getInfoBUTTON"
+        android:layout_above="@+id/inBUTTON"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:id="@+id/secHLine"
+        android:id="@+id/secondHLine"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:background="#080807"/>
-
-
-    <Button
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"
-        android:textColor="#ffffff"
-        android:background="#080807"
-        android:width="100dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get Info"
-        android:onClick="getInfo"
-        android:enabled="false"
-        android:id="@+id/getInfoBUTTON"
-        android:layout_above="@+id/inBUTTON"
-        />
+        android:layout_marginTop="5dp"
+        android:background="#000000"/>
 
     <Button
         android:layout_alignParentStart="true"
