--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#31859C"
+    android:background="#1C5EBB"
     tools:context="com.vaiotech.attendaceapp.ViewReportActivity">
 
 
@@ -30,7 +30,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:background="#FFFFFF"
-            android:text=""
+            android:text="0"
             android:layout_height="wrap_content"
             android:layout_width="90dp"
             android:textSize="30sp"
@@ -67,7 +67,7 @@
             android:gravity="center"
             android:layout_weight="0.4"
             android:background="#FFFFFF"
-            android:text=""
+            android:text="0"
             android:layout_height="wrap_content"
             android:layout_width="90dp"
             android:textSize="30sp"
@@ -87,7 +87,7 @@
             android:layout_below="@+id/absentTV"
             android:text="View Absentee Details"
             android:background="#FFFFFF"
-            android:textColor="#31859C"
+            android:textColor="#000000"
             android:id="@+id/vadButton"
             android:onClick="viewAbsenteeDetails"
         />
@@ -101,7 +101,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/secHLine"
-        android:background="#080807"/>
+        android:background="#000000"/>
 
 
     <ListView
