--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,19 +9,19 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
     <TextView
-        android:layout_weight="1"
-        android:text="First COlo"
+        android:layout_weight="0.7"
+        android:text="First"
         android:gravity="left"
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textColor="#000000"
-        android:textSize="20sp" />
+        android:textSize="17sp" />
 
     <TextView
-        android:layout_weight="1"
-        android:text="Sec COlo"
+        android:layout_weight="1.3"
+        android:text="Sec"
         android:gravity="left"
         android:id="@+id/desc"
         android:layout_width="0dp"
@@ -29,7 +29,7 @@
         android:layout_toRightOf="@+id/title"
         android:textColor="#000000"
         android:padding="5dp"
-        android:textSize="20sp"
+        android:textSize="17sp"
         />
     </LinearLayout>
 </RelativeLayout>
