--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,16 +2,9 @@
 
     <!-- Base application theme. -->ss
     <style name="AppTheme" parent="android:Theme.Holo.Light">
-        <item name="android:datePickerStyle">@style/DatePicker</item>
-        <item name="android:textViewStyle">@style/DatePicker</item>
+        <item name="android:radioButtonStyle">@style/RadioButtonAppTheme</item>
     </style>
 
-    <style name="DatePicker" parent="android:Theme.Holo.Light">
-        <item name="android:textColor">#FFFF</item>
-        <item name="android:divider">@color/border_color</item>
-        <item name="android:dividerHeight">1px</item>
-        <item name="android:dividerHorizontal">@color/border_color</item>
-    </style>
 
     <style name="MyApp.NumberPicker" parent="android:Widget.DatePicker">
         <item name="android:divider">@color/border_color</item>
@@ -21,11 +14,14 @@
     <style name="buttonStyle" >
         <item name="android:layout_width" >fill_parent</item>
         <item name="android:layout_height" >wrap_content</item>
-        <item name="android:textColor" >#ffffff</item>
         <item name="android:gravity" >center</item>
         <item name="android:layout_margin" >3dp</item>
         <item name="android:textSize" >20dp</item>
         <item name="android:shadowRadius" >2</item>
+    </style>
+
+    <style name="RadioButtonAppTheme" parent="android:Widget.CompoundButton.RadioButton">
+        <item name="android:button">@drawable/apptheme_btn_radio_holo_light</item>
     </style>
 
 </resources>
