--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -355,15 +355,14 @@
     </LinearLayout>
 
     <Button
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp"
+        android:layout_centerHorizontal="true"
         android:textSize="18sp"
         android:background="#ffffff"
-        android:textColor="#604A7B"
+        android:textColor="#000000"
         android:text="Change Password"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:id="@+id/changePasswordButton"
