--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
                            android:layout_height="wrap_content">
 
                            <RadioButton
+                               style="@style/RadioButtonAppTheme"
                                android:id="@+id/singleModeRB"
                                android:textSize="20sp"
                                android:textColor="#000000"
@@ -54,6 +55,7 @@
                                android:checked="true" />
 
                            <RadioButton
+                               style="@style/RadioButtonAppTheme"
                                android:id="@+id/batchModeRB"
                                android:textSize="20sp"
                                android:textColor="#000000"
@@ -95,7 +97,7 @@
                                     android:layout_weight="1"
                                     android:textSize="20sp"
                                     android:textColor="#FFF5EC"
-                                    android:background="#43464b"
+                                    android:background="@drawable/button_border"
                                     android:onClick="scanQRCode"
                                     android:id="@+id/button1"
                                     android:layout_width="match_parent"
@@ -112,7 +114,7 @@
                                    android:layout_weight="1"
                                    android:textSize="20sp"
                                    android:textColor="#FFF5EC"
-                                   android:background="#43464b"
+                                    android:background="@drawable/button_border"
                                    android:onClick="scanCard"
                                    android:id="@+id/button2"
                                    android:layout_width="match_parent"
@@ -129,7 +131,7 @@
                                 android:layout_weight="1"
                                 android:textSize="20sp"
                                 android:textColor="#FFF5EC"
-                                android:background="#43464b"
+                                android:background="@drawable/button_border"
                                 android:onClick="scanVoice"
                                 android:id="@+id/button3"
                                 android:layout_width="match_parent"
@@ -146,7 +148,7 @@
                                android:layout_weight="1"
                                android:textSize="20sp"
                                android:textColor="#FFF5EC"
-                               android:background="#43464b"
+                               android:background="@drawable/button_border"
                                android:onClick="manualEntry"
                                android:id="@+id/button4"
                                android:layout_width="match_parent"
